src/Raven.Studio/wwwroot/Content/css/styles.less
@import "bootstrap/bootstrap.less";
@import "fonts.less";
@import "checkbox-toggle.less";
@import "icons.less";
@import "animations.less";
@import "modals.less";
@import "main-menu.less";
@import "basic-layout.less";
@import "notification-center.less";
@import "virtual-grid.less";
@import "list-view.less";
@import "column-selector.less";
@import "feedback.less";
@import "toastr.less";
@import "usageStats.less";



@tooltip-inner-min-width:     100px;
@tooltip-inner-max-width:     200px;
@tooltip-inner-bg-color:      rgba(18, 18, 18, 0.95);
@tooltip-inner-color:         #ececf3;

.text-revisions {
    color: @color-revisions !important;
}

.text-lighter {
    color: @gray-lighter;
}


a.text-revisions:hover {
    color: lighten(@color-revisions,10%) !important;
}

/*
    Available animations (add "classname;" inside your class)
    .bouncein-style
    .spin-style
    .slidein-style
    .topexpand-style (used in expandable search)
    .fadein-style
*/
@import "testing-elements.less";
/* do not include in final build */
/* LOCAL VARIABLES AND KEYFRAMES*/

.shadow-style {
    box-shadow: 0 10px 20px 2px rgba(0, 0, 0, 0.45);
}

/* GLOBAL ITEMS */
h1,
h2,
h3 {
    font-weight: 300;
    margin-top: 3px;

    [class*=" icon-"],
    [class^="icon-"] {
        top: 4px;
    }
}

strong {
    color: @gray-lighter;
}

kbd {
    color: @gray-darker;
    background-color: @gray-lighter;
    border: 1px solid @gray-lighter;
    box-shadow: 0px 0px 0px 1px @brand-primary inset;
    border-radius: 2px;
}

.btn kbd {
    padding: 1px 4px;
    color: @gray-lighter;
    background-color: transparent;
    box-shadow: none;
}

.kbd {
    position: relative;

    strong {
        position: relative;
        top: 1px;
        font-size: 10px;
    }
}

small {
    kbd {
        font-size: 10px;
    }
}

p.small {
    line-height: 16px;
}



h1 {
    //text-transform: uppercase;
    margin-bottom: @grid-gutter-width;
}

h5 {
    margin-top:0;
    margin-bottom: 3px;
}

h6 {
    text-transform: uppercase;
}

.hr-title {
    display: flex;
    align-items: center;
    margin-bottom: @grid-gutter-width/4;

    h1, h2, h3, h4, h5 {
        margin: 0 6px 1px 0;
        text-transform: uppercase;
    }

    hr {
        flex-grow: 1;
        margin: 0;

        + .btn {
            margin-left: 6px;
        }
    }
}

.nobr {
    white-space: nowrap;
    display: inline !important;
}

.small-properties {
    font-size: 11px;
    text-transform: uppercase;
}

.whitespace-initial {
    white-space: initial !important;
}

.visible-block {
    display: block;
}

.btn {
    box-shadow: 0 1px 3px rgba(0,0,0,0.2);

    &:not(.dropdown-toggle), &.btn-block {
        .caret {
            margin-left: 2px;
            margin-right: -2px;
            float: right;
            position: relative;
            top: 10px;
            margin-left: 7px;
            margin-right: -2px;
        }

        &.btn-xs {
            .caret {
                top: 6px;
            }
        }

        &.btn-sm {
            .caret {
                top: 8px;
            }
        }

        &.btn-lg {
            .caret {
                top: 11px;
            }
        }
    }

    &.btn-checkable {
        &.active {
            & > i::before {
                content: @tick-character;
            }
        }
    }
}

.btn,
a {
    text-decoration: none !important;

    &:active,
    &:focus,
    &:hover {
        outline: 0 !important;
    }

    &.reset-color {
        color: inherit;
        cursor: pointer;
    }
}

.btn-group.btn-block > .dropdown-menu {
    min-width: 100%;
}

.dropdown, .btn-group {

    &.pull-right, &.dropdown-right {
        .dropdown-menu {
            left: auto;
            right: 0;
        }
    }

    &.pull-right-sm, .dropdown-right-sm {
        @media (min-width:@screen-sm) {
            .dropdown-menu {
                left: auto;
                right: 0;
            }
        }
    }

    &.pull-right-md, .dropdown-right-md {
        @media (min-width:@screen-md) {
            .dropdown-menu {
                left: auto;
                right: 0;
            }
        }
    }

    &.pull-right-lg, .dropdown-right-lg {
        @media (min-width:@screen-lg) {
            .dropdown-menu {
                left: auto;
                right: 0;
            }
        }
    }

    &.pull-right-xl, .dropdown-right-xl {
        @media (min-width:@screen-xl) {
            .dropdown-menu {
                left: auto;
                right: 0;
            }
        }
    }

    .dropdown-menu {
        &.max-height, .max-height {
            max-height: 40vh;
            overflow: auto;
        }

        &.has-info {
            padding-bottom: 0;

            .bg-primary, .bg-success, .bg-info, .bg-warning, .bg-danger {
                padding: 2px;
                font-size: 12px;
                text-align: center;
            }
        }

        &.settings-menu {
            width: 400px;
            max-width: 100vw;

            & > .setting-item {
                padding: 5px @grid-gutter-width;
            }

            .control-label {
                text-align: left;
                padding-top: 11px;
                padding-bottom: 11px;
                line-height: 15px;
            }
        }

        .has-badge {
            position: relative;
            padding-right: 40px;

            .badge {
                position: absolute;
                right: 10px;
                top: 5px;
            }
        }
    }
}

.control-label {
    @media (min-width: @screen-sm) {
        margin-top: 5px;
        text-align: right;
    }

    .labelNote {
        margin-top: -3px;
        line-height: 12px;
        font-size: 10px;
    }
}
/* ... */

